--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -97,7 +97,7 @@
                         <a style="color: red"><td th:text="${error}">err</td></a>
                         <p/>
 
-                        <form name="signup" action="/auth/signup" method="post">
+                        <form name="signup" action="/auth/signup" method="post" autocomplete="off">
 
                             <div class="form-group">
                                 <label for="email" th:text="#{signup.email}">Email</label>
