--- a/src/main/resources/static/css/base/background.css
+++ b/src/main/resources/static/css/base/background.css
@@ -15,8 +15,10 @@ header,
 
     /* Center and scale the image nicely */
     background-position: center;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-size: cover;
+
+    overflow: auto;
 }
 
 /*.rgba-gradient {
