--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -98,7 +98,7 @@
                             <form action="/auth/login" method="post">
                                 <div class="form-group">
                                     <label for="username" th:text="#{login.username}">Username</label>
-                                    <input type="text" class="form-control" id="username" name="username">
+                                    <input type="text" class="form-control" id="username" name="username" autocomplete="off">
                                 </div>
                                 <div class="form-group">
                                     <label for="password" th:text="#{login.password}">Password</label>
